Restored improved password prompting that was lost somehow.

--- a/.gitignore
+++ b/.gitignore
@@ -1,17 +1,3 @@
 lorem-ipsum-*.txt
-bin/cipherforge_darwin_amd64
-bin/cipherforge_darwin_arm64
-bin/cipherforge_freebsd_amd64
-bin/cipherforge_linux_386
-bin/cipherforge_linux_amd64
-bin/cipherforge_linux_arm64
-bin/cipherforge_windows_386.exe
-bin/cipherforge_windows_amd64.exe
-bin/unpacked/cipherforge_darwin_amd64
-bin/unpacked/cipherforge_darwin_arm64
-bin/unpacked/cipherforge_freebsd_amd64
-bin/unpacked/cipherforge_linux_386
-bin/unpacked/cipherforge_linux_amd64
-bin/unpacked/cipherforge_linux_arm64
-bin/unpacked/cipherforge_windows_386.exe
-bin/unpacked/cipherforge_windows_amd64.exe
+bin/*
+dist/*
